paperless-gpt/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-ip-whitelist@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    argocd.argoproj.io/ignore-healthcheck: "true"
  name: paperless-gpt-ingress
  namespace: paperless
spec:
  tls:
    - hosts:
        - paperless-gpt.local.traunseenet.com
      secretName: letsencrypt-prod-local-gpt
  ingressClassName: traefik
  rules:
    - host: paperless-gpt.local.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: paperless-gpt-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
